add application.properties add liliquibase file properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+#bot.name=
+#bot.token=
+#bot.chatId=
 
+spring.liquibase.change-log=liquibase/changelog-master.yml
+
+spring.datasource.url=dbc:postgresql://
+spring.datasource.username=username
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=validate
