--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-#bot.name=
-#bot.token=
-#bot.chatId=
+bot.token=6215305884:AAFls6Sv0J1J8uYmjUGQnxyKTjCvBahDak4
+
+logging.level.root=info
 
 spring.liquibase.change-log=liquibase/changelog-master.yml
 
-spring.datasource.url=dbc:postgresql://
-spring.datasource.username=username
-spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://snuffleupagus.db.elephantsql.com:5432/pizeisax
+spring.datasource.username=pizeisax
+spring.datasource.password=nxL80ovv338OcV1OB0mlKQb3fbpnZswO
 spring.jpa.hibernate.ddl-auto=validate
+
