--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-bot.token=6087993263:AAEgCJVJ6cvtKRchdv3i0tAthQnWBNpdnsM
+
+bot.token=
 
 logging.level.root=info
 
 spring.liquibase.change-log=liquibase/changelog-master.yml
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/telegrammbot
-spring.datasource.username=postgres
-spring.datasource.password=Couldlie
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=validate
-
