--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 
-bot.token=6087993263:AAEgCJVJ6cvtKRchdv3i0tAthQnWBNpdnsM
+bot.token=5842844682:AAFCZPaLme-9fuPxQxOTr98T3Q-UV7E0LcE
 
 logging.level.root=info
 
 spring.liquibase.change-log=liquibase/changelog-master.yml
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/telegrammbot
+spring.datasource.url=jdbc:postgresql://localhost:5432/bot_shelter
 spring.datasource.username=postgres
-spring.datasource.password=Couldlie
-
-spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.password=Viktor_My_SQL#
+spring.jpa.hibernate.ddl-auto=create
