--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ logging.level.root=info
 
 spring.liquibase.change-log=liquibase/changelog-master.yml
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/bot_shelter
+spring.datasource.url=jdbc:postgresql://localhost:5433/telegrammbot
 spring.datasource.username=postgres
-spring.datasource.password=Viktor_My_SQL#
+spring.datasource.password=Couldlie
 spring.jpa.hibernate.ddl-auto=create
