Сделан второй todo, внос в БД.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.liquibase.change-log=liquibase/changelog-master.yml
 spring.datasource.url=jdbc:postgresql://localhost:5433/telegrammbot
 spring.datasource.username=postgres
 spring.datasource.password=Couldlie
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
