--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
     <name>PetProjectSquad</name>
     <description>PetProjectSquad</description>
     <properties>
+        <property name="hibernate.cache.use_second_level_cache" value="true"/>
+        <property name="hibernate.cache.region.factory_class"
+                  value="org.hibernate.cache.ehcache.EhCacheRegionFactory"/>
         <java.version>17</java.version>
     </properties>
     <dependencies>
@@ -76,11 +79,22 @@
             <scope>runtime</scope>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.liquibase</groupId>-->
-<!--            <artifactId>liquibase-core</artifactId>-->
-<!--        </dependency>-->
-
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
+        <!--кеширование-->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-ehcache</artifactId>
+            <version>5.2.2.Final</version>
+        </dependency>
+        <!--реализатор аннотаций spring, кеширование-->
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>2.5.5</version>
+        </dependency>
 
     </dependencies>
 
