--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
+src/main/resources/application.properties/
 HELP.md
 target/
-src/main/resources/application.properties
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
