--- a/pom.xml
+++ b/pom.xml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
+    <groupId>best.team</groupId>
+    <artifactId>PetProjectSquad</artifactId>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.0.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>best.team</groupId>
-    <artifactId>PetProjectSquad</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>PetProjectSquad</name>
     <description>PetProjectSquad</description>
+
     <properties>
-        <property name="hibernate.cache.use_second_level_cache" value="true"/>
-        <property name="hibernate.cache.region.factory_class"
-                  value="org.hibernate.cache.ehcache.EhCacheRegionFactory"/>
+        <property> name="hibernate.cache.use_second_level_cache" value="true"</property>
+        <property> name="hibernate.cache.region.factory_class"
+                  value="org.hibernate.cache.ehcache.EhCacheRegionFactory"</property>
         <java.version>17</java.version>
     </properties>
+
     <dependencies>
 
         <dependency>
@@ -79,10 +82,10 @@
             <scope>runtime</scope>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.liquibase</groupId>-->
-<!--            <artifactId>liquibase-core</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
         <!--кеширование-->
         <dependency>
             <groupId>org.hibernate</groupId>
